# djinn

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INFORME_TECNICO.md  LICENSE  README.md  config.py  env  fairy-bot.service  install.sh  main.py  patch_llm_client.py  persona.md  pyproject.toml  requirements.txt  soul.md  start.sh
.aris/: 00-scope.md  REPORT.md  verdict.json
.github/workflows/: ci.yml
cogs/: actions.py  active_award.py  admin.py  automod_v3.py  aware.py  birthdays.py  conscious_mode.py  credits_cmd.py  curse.py  dashboard.py  dashboard_v2.py  db_maintenance.py  destilacion.py  djinn_shares.py  dream_quest.py  idle_pinger.py  info.py  link_fixer.py  listeners.py  loan_shark.py  message_logger.py  model_switcher.py  moderation.py  morosos.py  mouthwash.py  music.py  nexus_observer.py  nlp_handler.py  override_api.py  recompensas.py  role_persistence.py  server_memory.py  synthtext.py  torneo.py  treasury.py  xoft.py  zzz_builds.py  zzz_calendar.py  zzz_rag.py
cogs/media_guard/: __init__.py  cog.py  embedder.py  gif_processor.py  index_manager.py  media_resolver.py  thresholds.py
data/: README.md  kadath_world.json  model_config.json  safe_domains.json  xoft_persona.md
data/mapas/: zona_principal.json
data/simulacion/: estado_global.json
docs/: API.md  DEVELOPER_GUIDE.md
scripts/: automod3_replay.py  backfill_chromadb.py  backfill_embeddings.py  download_mobilenet_onnx.py  download_opusmt.py  generate_kadath_world.py  kadath_act1_design.md  kadath_act1_rework.py  kadath_act4_mascaras.py  kadath_act4_revelacion.py  kadath_act4_router.py  kadath_act4_trato_huida.py  kadath_act4_ultraplan.md  kadath_act5_core.py  kadath_act5_deepplan.md  kadath_act5_endings_1_4.py  kadath_act5_endings_5_8.py  kadath_act5_endings_9_12.py  kadath_acts.py  kadath_arc_isla_papu.py  kadath_text_variants.py  rebrand_loggers.py  test_boot.py
skills/: antiraid.md  apodos.md  ascii_art.md  banco.md  data_mastery.md  deudas.md  embed_design.md  eventos.md  graphics.md  obscura-web.md  onboarding.md  rules.md  sellar.md  sherlock_kai.md  traduccion.md  zzz_terminos.md
templates/: _theme_youkai.svg.j2  achievement_card.svg.j2  banner.svg.j2  bar_chart.svg.j2  comparison.svg.j2  correlation_matrix.svg.j2  donut_chart.svg.j2  graph_network.svg.j2  heatmap.svg.j2  investigation_timeline.svg.j2  leaderboard.svg.j2  love_graph.svg.j2  profile_card.svg.j2  radar_chart.svg.j2  stat_grid.svg.j2  tierlist.svg.j2  timeline.svg.j2
tests/: conftest.py  test_actions.py  test_active_award.py  test_automod_v3_cog.py  test_circuit_breaker.py  test_database_credits.py  test_database_shares.py  test_db_maintenance.py  test_discord_tools_contract.py  test_goodfaith_engine.py  test_http_session.py  test_link_fixer.py  test_list_listeners.py  test_metrics.py  test_orchestrator_rate.py  test_role_persistence.py  test_safe_domains.py  test_security.py  test_terminal_tools_guard.py  test_tool_dedup.py  test_tool_executor_dispatch.py  test_torneo_integration.py
utils/: ai_client.py  api_server.py  audit_log.py  card_generator.py  chroma_memory.py  circuit_breaker.py  credit_economy.py  curse_translator.py  curse_webhook.py  dashboard.py  database.py  destilador.py  destilador_personas.py  discord_tools.py  embed_engine.py  genero_detector.py  google_client.py  graph_analyzer.py  http_session.py  kadath_gamestate.py  link_checker.py  llm_client.py  loan_engine.py  memoria_agente.py  message_transforms.py  metrics.py  mouth_wash_llm.py  nexus.py  orch_types.py  orchestrator.py  repetition_shield.py  safe_domains.py  scene_common.py  scene_dreamland.py  scene_rainy.py  scene_synthwave.py  security.py  shop_renderer.py  template_engine.py  torneo_renderer.py  (+3 more)
utils/music_renderer/: __init__.py  cropper.py
utils/tools/: __init__.py  _constants.py  _declarations.py  _helpers.py
utils/zzz_calendar/: __init__.py  assets.py  config.json  data.py  renderer.py  template.html
